deploy: 00fad0495b43d5064c23627972a8648eca3803f9

--- a/deprecated-list.html
+++ b/deprecated-list.html
@@ -52,6 +52,7 @@ loadScripts(document, 'script');</script>
 <h2 title="Contents">Contents</h2>
 <ul>
 <li><a href="#class">Classes</a></li>
+<li><a href="#method">Methods</a></li>
 </ul>
 </div>
 <ul class="block-list">
@@ -63,6 +64,29 @@ loadScripts(document, 'script');</script>
 <div class="table-header col-last">Description</div>
 <div class="col-summary-item-name even-row-color"><a href="growthbook/sdk/java/Namespace.html" title="class in growthbook.sdk.java">growthbook.sdk.java.Namespace</a></div>
 <div class="col-last even-row-color"></div>
+</div>
+</div>
+</li>
+</ul>
+<ul class="block-list">
+<li>
+<div id="method">
+<div class="caption"><span>Deprecated Methods</span></div>
+<div class="summary-table two-column-summary">
+<div class="table-header col-first">Method</div>
+<div class="table-header col-last">Description</div>
+<div class="col-summary-item-name even-row-color"><a href="growthbook/sdk/java/Experiment.ExperimentBuilder.html#namespace(growthbook.sdk.java.Namespace)">growthbook.sdk.java.Experiment.ExperimentBuilder.namespace<wbr>(Namespace)</a></div>
+<div class="col-last even-row-color"></div>
+<div class="col-summary-item-name odd-row-color"><a href="growthbook/sdk/java/Experiment.html#getNamespace()">growthbook.sdk.java.Experiment.getNamespace()</a></div>
+<div class="col-last odd-row-color"></div>
+<div class="col-summary-item-name even-row-color"><a href="growthbook/sdk/java/Experiment.html#setNamespace(growthbook.sdk.java.Namespace)">growthbook.sdk.java.Experiment.setNamespace<wbr>(Namespace)</a></div>
+<div class="col-last even-row-color"></div>
+<div class="col-summary-item-name odd-row-color"><a href="growthbook/sdk/java/FeatureRule.FeatureRuleBuilder.html#namespace(growthbook.sdk.java.Namespace)">growthbook.sdk.java.FeatureRule.FeatureRuleBuilder.namespace<wbr>(Namespace)</a></div>
+<div class="col-last odd-row-color"></div>
+<div class="col-summary-item-name even-row-color"><a href="growthbook/sdk/java/FeatureRule.html#getNamespace()">growthbook.sdk.java.FeatureRule.getNamespace()</a></div>
+<div class="col-last even-row-color"></div>
+<div class="col-summary-item-name odd-row-color"><a href="growthbook/sdk/java/FeatureRule.html#setNamespace(growthbook.sdk.java.Namespace)">growthbook.sdk.java.FeatureRule.setNamespace<wbr>(Namespace)</a></div>
+<div class="col-last odd-row-color"></div>
 </div>
 </div>
 </li>
