--- a/growthbook/sdk/java/package-tree.html
+++ b/growthbook/sdk/java/package-tree.html
@@ -60,22 +60,30 @@ loadScripts(document, 'script');</script>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
 <li class="circle">growthbook.sdk.java.<a href="BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java">BucketRange</a></li>
+<li class="circle">growthbook.sdk.java.<a href="BucketRange.BucketRangeBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">BucketRange.BucketRangeBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="Experiment.html" class="type-name-link" title="class in growthbook.sdk.java">Experiment</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="Experiment.ExperimentBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">Experiment.ExperimentBuilder</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="ExperimentHelper.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentHelper</a></li>
 <li class="circle">growthbook.sdk.java.<a href="ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentResult</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="ExperimentResult.ExperimentResultBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentResult.ExperimentResultBuilder</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="Feature.html" class="type-name-link" title="class in growthbook.sdk.java">Feature</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="FeatureEvalContext.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureEvalContext</a></li>
 <li class="circle">growthbook.sdk.java.<a href="FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureResult</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="FeatureResult.FeatureResultBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureResult.FeatureResultBuilder</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="FeatureRule.FeatureRuleBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule.FeatureRuleBuilder</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="Filter.html" class="type-name-link" title="class in growthbook.sdk.java">Filter</a></li>
+<li class="circle">growthbook.sdk.java.<a href="Filter.FilterBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">Filter.FilterBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="GBContext.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext</a></li>
 <li class="circle">growthbook.sdk.java.<a href="GBContext.GBContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext.GBContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="GBFeaturesRepository.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepository</a></li>
+<li class="circle">growthbook.sdk.java.<a href="GBFeaturesRepository.GBFeaturesRepositoryBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepository.GBFeaturesRepositoryBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="GBFeaturesRepositoryRequestInterceptor.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepositoryRequestInterceptor</a> (implements okhttp3.Interceptor)</li>
 <li class="circle">growthbook.sdk.java.<a href="GeneratedStickyBucketAssignmentDocModel.html" class="type-name-link" title="class in growthbook.sdk.java">GeneratedStickyBucketAssignmentDocModel</a></li>
 <li class="circle">growthbook.sdk.java.<a href="GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a></li>
 <li class="circle">growthbook.sdk.java.<a href="HashAttributeAndHashValue.html" class="type-name-link" title="class in growthbook.sdk.java">HashAttributeAndHashValue</a></li>
 <li class="circle">growthbook.sdk.java.<a href="Namespace.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace</a></li>
+<li class="circle">growthbook.sdk.java.<a href="Namespace.NamespaceBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace.NamespaceBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="ParentCondition.html" class="type-name-link" title="class in growthbook.sdk.java">ParentCondition</a></li>
 <li class="circle">growthbook.sdk.java.<a href="StickyBucketVariation.html" class="type-name-link" title="class in growthbook.sdk.java">StickyBucketVariation</a></li>
 <li class="circle">growthbook.sdk.java.<a href="StringUtils.html" class="type-name-link" title="class in growthbook.sdk.java">StringUtils</a></li>
@@ -90,6 +98,7 @@ loadScripts(document, 'script');</script>
 </li>
 <li class="circle">growthbook.sdk.java.<a href="TrackData.html" class="type-name-link" title="class in growthbook.sdk.java">TrackData</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="VariationMeta.html" class="type-name-link" title="class in growthbook.sdk.java">VariationMeta</a></li>
+<li class="circle">growthbook.sdk.java.<a href="VariationMeta.VariationMetaBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">VariationMeta.VariationMetaBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="Version.html" class="type-name-link" title="class in growthbook.sdk.java">Version</a></li>
 </ul>
 </li>
