--- a/overview-tree.html
+++ b/overview-tree.html
@@ -61,23 +61,31 @@ loadScripts(document, 'script');</script>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java">BucketRange</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/BucketRange.BucketRangeBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">BucketRange.BucketRangeBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Experiment.html" class="type-name-link" title="class in growthbook.sdk.java">Experiment</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Experiment.ExperimentBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">Experiment.ExperimentBuilder</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentHelper.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentHelper</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentResult</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentResult.ExperimentResultBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentResult.ExperimentResultBuilder</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Feature.html" class="type-name-link" title="class in growthbook.sdk.java">Feature</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureEvalContext.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureEvalContext</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureResult</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResult.FeatureResultBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureResult.FeatureResultBuilder</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.FeatureRuleBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule.FeatureRuleBuilder</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Filter.html" class="type-name-link" title="class in growthbook.sdk.java">Filter</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Filter.FilterBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">Filter.FilterBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.GBContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext.GBContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepository.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepository</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepository.GBFeaturesRepositoryBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepository.GBFeaturesRepositoryBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepositoryRequestInterceptor.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepositoryRequestInterceptor</a> (implements okhttp3.Interceptor)</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GeneratedStickyBucketAssignmentDocModel.html" class="type-name-link" title="class in growthbook.sdk.java">GeneratedStickyBucketAssignmentDocModel</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/HashAttributeAndHashValue.html" class="type-name-link" title="class in growthbook.sdk.java">HashAttributeAndHashValue</a></li>
 <li class="circle">growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/InMemoryStickyBucketServiceImpl.html" class="type-name-link" title="class in growthbook.sdk.java.stickyBucketing">InMemoryStickyBucketServiceImpl</a> (implements growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/StickyBucketService.html" title="interface in growthbook.sdk.java.stickyBucketing">StickyBucketService</a>)</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Namespace.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Namespace.NamespaceBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace.NamespaceBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ParentCondition.html" class="type-name-link" title="class in growthbook.sdk.java">ParentCondition</a></li>
 <li class="circle">growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/StickyAssignmentsDocument.html" class="type-name-link" title="class in growthbook.sdk.java.stickyBucketing">StickyAssignmentsDocument</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/StickyBucketVariation.html" class="type-name-link" title="class in growthbook.sdk.java">StickyBucketVariation</a></li>
@@ -93,6 +101,7 @@ loadScripts(document, 'script');</script>
 </li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/TrackData.html" class="type-name-link" title="class in growthbook.sdk.java">TrackData</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/VariationMeta.html" class="type-name-link" title="class in growthbook.sdk.java">VariationMeta</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/VariationMeta.VariationMetaBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">VariationMeta.VariationMetaBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Version.html" class="type-name-link" title="class in growthbook.sdk.java">Version</a></li>
 </ul>
 </li>
