deploy: e1e21cf77e43bf8e997dfc065f5d35d05c46e5d6

--- a/index-all.html
+++ b/index-all.html
@@ -67,6 +67,8 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="growthbook/sdk/java/Filter.FilterBuilder.html#attribute(java.lang.String)" class="member-name-link">attribute(String)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/Filter.FilterBuilder.html" title="class in growthbook.sdk.java">Filter.FilterBuilder</a></dt>
 <dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/GBContext.GBContextBuilder.html#attributes(com.google.gson.JsonObject)" class="member-name-link">attributes(JsonObject)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.GBContextBuilder.html" title="class in growthbook.sdk.java">GBContext.GBContextBuilder</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/GBContext.GBContextBuilder.html#attributesJson(java.lang.String)" class="member-name-link">attributesJson(String)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.GBContextBuilder.html" title="class in growthbook.sdk.java">GBContext.GBContextBuilder</a></dt>
 <dd>&nbsp;</dd>
 </dl>
@@ -146,11 +148,11 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/GBFeaturesRepository.GBFeaturesRepositoryBuilder.html#clientKey(java.lang.String)" class="member-name-link">clientKey(String)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepository.GBFeaturesRepositoryBuilder.html" title="class in growthbook.sdk.java">GBFeaturesRepository.GBFeaturesRepositoryBuilder</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="growthbook/sdk/java/FeatureRule.FeatureRuleBuilder.html#condition(com.google.gson.JsonElement)" class="member-name-link">condition(JsonElement)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.FeatureRuleBuilder.html" title="class in growthbook.sdk.java">FeatureRule.FeatureRuleBuilder</a></dt>
+<dt><a href="growthbook/sdk/java/FeatureRule.FeatureRuleBuilder.html#condition(com.google.gson.JsonObject)" class="member-name-link">condition(JsonObject)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.FeatureRuleBuilder.html" title="class in growthbook.sdk.java">FeatureRule.FeatureRuleBuilder</a></dt>
 <dd>
 <div class="block">Optional targeting condition</div>
 </dd>
-<dt><a href="growthbook/sdk/java/Experiment.ExperimentBuilder.html#conditionJson(com.google.gson.JsonElement)" class="member-name-link">conditionJson(JsonElement)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/Experiment.ExperimentBuilder.html" title="class in growthbook.sdk.java">Experiment.ExperimentBuilder</a></dt>
+<dt><a href="growthbook/sdk/java/Experiment.ExperimentBuilder.html#conditionJson(com.google.gson.JsonObject)" class="member-name-link">conditionJson(JsonObject)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/Experiment.ExperimentBuilder.html" title="class in growthbook.sdk.java">Experiment.ExperimentBuilder</a></dt>
 <dd>
 <div class="block">Optional targeting condition</div>
 </dd>
@@ -255,7 +257,7 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Defines a single Experiment</div>
 </dd>
-<dt><a href="growthbook/sdk/java/Experiment.html#%3Cinit%3E(java.lang.String,java.util.ArrayList,java.util.ArrayList,java.lang.Boolean,java.lang.Float,com.google.gson.JsonElement,java.util.ArrayList,growthbook.sdk.java.Namespace,java.lang.Integer,java.lang.String,java.lang.Integer,java.util.ArrayList,java.util.ArrayList,java.util.ArrayList,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.Boolean,java.lang.Integer,java.lang.Integer)" class="member-name-link">Experiment(String, ArrayList&lt;ValueType&gt;, ArrayList&lt;Float&gt;, Boolean, Float, JsonElement, ArrayList&lt;ParentCondition&gt;, Namespace, Integer, String, Integer, ArrayList&lt;BucketRange&gt;, ArrayList&lt;VariationMeta&gt;, ArrayList&lt;Filter&gt;, String, String, String, String, Boolean, Integer, Integer)</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/Experiment.html" title="class in growthbook.sdk.java">Experiment</a></dt>
+<dt><a href="growthbook/sdk/java/Experiment.html#%3Cinit%3E(java.lang.String,java.util.ArrayList,java.util.ArrayList,java.lang.Boolean,java.lang.Float,com.google.gson.JsonObject,java.util.ArrayList,growthbook.sdk.java.Namespace,java.lang.Integer,java.lang.String,java.lang.Integer,java.util.ArrayList,java.util.ArrayList,java.util.ArrayList,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.Boolean,java.lang.Integer,java.lang.Integer)" class="member-name-link">Experiment(String, ArrayList&lt;ValueType&gt;, ArrayList&lt;Float&gt;, Boolean, Float, JsonObject, ArrayList&lt;ParentCondition&gt;, Namespace, Integer, String, Integer, ArrayList&lt;BucketRange&gt;, ArrayList&lt;VariationMeta&gt;, ArrayList&lt;Filter&gt;, String, String, String, String, Boolean, Integer, Integer)</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/Experiment.html" title="class in growthbook.sdk.java">Experiment</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/FeatureResultSource.html#EXPERIMENT" class="member-name-link">EXPERIMENT</a> - Enum constant in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResultSource.html" title="enum class in growthbook.sdk.java">FeatureResultSource</a></dt>
 <dd>
@@ -360,7 +362,7 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Overrides the defaultValue of a Feature based on a set of requirements.</div>
 </dd>
-<dt><a href="growthbook/sdk/java/FeatureRule.html#%3Cinit%3E(java.lang.String,java.lang.String,java.lang.Float,ValueType,java.util.ArrayList,java.util.ArrayList,growthbook.sdk.java.Namespace,java.lang.String,com.google.gson.JsonElement,java.util.ArrayList,java.lang.Integer,growthbook.sdk.java.BucketRange,java.util.ArrayList,java.util.ArrayList,java.util.ArrayList,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.Boolean,java.lang.Integer,java.lang.Integer,java.util.ArrayList)" class="member-name-link">FeatureRule(String, String, Float, ValueType, ArrayList&lt;ValueType&gt;, ArrayList&lt;Float&gt;, Namespace, String, JsonElement, ArrayList&lt;ParentCondition&gt;, Integer, BucketRange, ArrayList&lt;BucketRange&gt;, ArrayList&lt;VariationMeta&gt;, ArrayList&lt;Filter&gt;, String, String, String, String, Boolean, Integer, Integer, ArrayList&lt;TrackData&lt;ValueType&gt;&gt;)</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.html" title="class in growthbook.sdk.java">FeatureRule</a></dt>
+<dt><a href="growthbook/sdk/java/FeatureRule.html#%3Cinit%3E(java.lang.String,java.lang.String,java.lang.Float,ValueType,java.util.ArrayList,java.util.ArrayList,growthbook.sdk.java.Namespace,java.lang.String,com.google.gson.JsonObject,java.util.ArrayList,java.lang.Integer,growthbook.sdk.java.BucketRange,java.util.ArrayList,java.util.ArrayList,java.util.ArrayList,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.Boolean,java.lang.Integer,java.lang.Integer,java.util.ArrayList)" class="member-name-link">FeatureRule(String, String, Float, ValueType, ArrayList&lt;ValueType&gt;, ArrayList&lt;Float&gt;, Namespace, String, JsonObject, ArrayList&lt;ParentCondition&gt;, Integer, BucketRange, ArrayList&lt;BucketRange&gt;, ArrayList&lt;VariationMeta&gt;, ArrayList&lt;Filter&gt;, String, String, String, String, Boolean, Integer, Integer, ArrayList&lt;TrackData&lt;ValueType&gt;&gt;)</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.html" title="class in growthbook.sdk.java">FeatureRule</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/FeatureRule.FeatureRuleBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule.FeatureRuleBuilder</a>&lt;<a href="growthbook/sdk/java/FeatureRule.FeatureRuleBuilder.html" title="type parameter in FeatureRule.FeatureRuleBuilder">ValueType</a>&gt; - Class in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
 <dd>&nbsp;</dd>
@@ -421,7 +423,7 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Context object passed into the GrowthBook constructor.</div>
 </dd>
-<dt><a href="growthbook/sdk/java/GBContext.html#%3Cinit%3E(java.lang.String,java.lang.String,com.google.gson.JsonObject,java.lang.String,java.lang.Boolean,java.lang.Boolean,java.lang.String,java.lang.Boolean,java.util.Map,growthbook.sdk.java.TrackingCallback,growthbook.sdk.java.FeatureUsageCallback,growthbook.sdk.java.stickyBucketing.StickyBucketService,java.util.Map,java.util.List)" class="member-name-link">GBContext(String, String, JsonObject, String, Boolean, Boolean, String, Boolean, Map&lt;String, Integer&gt;, TrackingCallback, FeatureUsageCallback, StickyBucketService, Map&lt;String, StickyAssignmentsDocument&gt;, List&lt;String&gt;)</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.html" title="class in growthbook.sdk.java">GBContext</a></dt>
+<dt><a href="growthbook/sdk/java/GBContext.html#%3Cinit%3E(java.lang.String,com.google.gson.JsonObject,java.lang.String,com.google.gson.JsonObject,java.lang.String,java.lang.Boolean,java.lang.Boolean,java.lang.String,java.lang.Boolean,java.util.Map,growthbook.sdk.java.TrackingCallback,growthbook.sdk.java.FeatureUsageCallback,growthbook.sdk.java.stickyBucketing.StickyBucketService,java.util.Map,java.util.List)" class="member-name-link">GBContext(String, JsonObject, String, JsonObject, String, Boolean, Boolean, String, Boolean, Map&lt;String, Integer&gt;, TrackingCallback, FeatureUsageCallback, StickyBucketService, Map&lt;String, StickyAssignmentsDocument&gt;, List&lt;String&gt;)</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.html" title="class in growthbook.sdk.java">GBContext</a></dt>
 <dd>
 <div class="block">The <a href="growthbook/sdk/java/GBContext.GBContextBuilder.html" title="class in growthbook.sdk.java"><code>GBContext.GBContextBuilder</code></a> is recommended for constructing a Context.</div>
 </dd>
@@ -488,6 +490,10 @@ loadScripts(document, 'script');</script>
 <dt><a href="growthbook/sdk/java/stickyBucketing/StickyAssignmentsDocument.html#getAttributeName()" class="member-name-link">getAttributeName()</a> - Method in class growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/StickyAssignmentsDocument.html" title="class in growthbook.sdk.java.stickyBucketing">StickyAssignmentsDocument</a></dt>
 <dd>
 <div class="block">The name of the attribute used to identify the user (e.g.</div>
+</dd>
+<dt><a href="growthbook/sdk/java/GBContext.html#getAttributes()" class="member-name-link">getAttributes()</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.html" title="class in growthbook.sdk.java">GBContext</a></dt>
+<dd>
+<div class="block">Map of user attributes that are used to assign variations</div>
 </dd>
 <dt><a href="growthbook/sdk/java/GBContext.html#getAttributesJson()" class="member-name-link">getAttributesJson()</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.html" title="class in growthbook.sdk.java">GBContext</a></dt>
 <dd>
@@ -1329,6 +1335,10 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">The name of the attribute used to identify the user (e.g.</div>
 </dd>
+<dt><a href="growthbook/sdk/java/GBContext.html#setAttributes(com.google.gson.JsonObject)" class="member-name-link">setAttributes(JsonObject)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.html" title="class in growthbook.sdk.java">GBContext</a></dt>
+<dd>
+<div class="block">You can update the attributes with new user attributes to evaluate against.</div>
+</dd>
 <dt><a href="growthbook/sdk/java/GrowthBook.html#setAttributes(java.lang.String)" class="member-name-link">setAttributes(String)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBook.html" title="class in growthbook.sdk.java">GrowthBook</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/GBContext.html#setAttributesJson(java.lang.String)" class="member-name-link">setAttributesJson(String)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.html" title="class in growthbook.sdk.java">GBContext</a></dt>
@@ -1354,7 +1364,7 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Boolean value that check if data changed</div>
 </dd>
-<dt><a href="growthbook/sdk/java/FeatureRule.html#setCondition(com.google.gson.JsonElement)" class="member-name-link">setCondition(JsonElement)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.html" title="class in growthbook.sdk.java">FeatureRule</a></dt>
+<dt><a href="growthbook/sdk/java/FeatureRule.html#setCondition(com.google.gson.JsonObject)" class="member-name-link">setCondition(JsonObject)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.html" title="class in growthbook.sdk.java">FeatureRule</a></dt>
 <dd>
 <div class="block">Optional targeting condition</div>
 </dd>
@@ -1362,7 +1372,7 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Target condition</div>
 </dd>
-<dt><a href="growthbook/sdk/java/Experiment.html#setConditionJson(com.google.gson.JsonElement)" class="member-name-link">setConditionJson(JsonElement)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/Experiment.html" title="class in growthbook.sdk.java">Experiment</a></dt>
+<dt><a href="growthbook/sdk/java/Experiment.html#setConditionJson(com.google.gson.JsonObject)" class="member-name-link">setConditionJson(JsonObject)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/Experiment.html" title="class in growthbook.sdk.java">Experiment</a></dt>
 <dd>
 <div class="block">Optional targeting condition</div>
 </dd>
